<resources>
    <string name="app_name">SPO_CARE</string>
    <string name="selftest_1">치아우식증 테스트</string>
    <string name="selftest_2">치주질환 테스트</string>
    <string name="brain_lesions_characteristic">
        - 대부분의 뇌성마비 장애인은 뇌손상 시기에 발육된 치아의 치질이상으로 인해 충치가 쉽게 생기므로 조기부터 예방적 관리에 관심을 가져야 합니다.\n
        - 꼼꼼한 칫솔질과 불소사용, 실란트 등의 방법으로 구강병을 예방할 수 있습니다.
    </string>
    <string name="brain_lesions_precautions">
        1. 치아가 약한 반면에 강하고 부적절한 근육 움직임으로 인해 치아가 마모되거나 부러질 수도 있습니다.\n
        → 이를 방지하기 위해서는 치아를 완전히 씌우는 등 적절한 수복 치료가 필요하기 도 합니다\n\n


        2. 혀나 뺨, 입술 등의 근육의 움직임이 둔화되어 입안에 음식물이 오래 남아있을 수 있어서 충치 발생률을 높일 수 있고 씹는 기능이 약화되어 부드러운 음식을 골라 먹다보면 구강 내 자정작용이 제대로 되지 않는 것도 구강병을 일으키는 원인이 됩니다.\n
        → 식사는 시간이 걸리더라도 되도록 섬유질이 섞인 음식을 씹어서 삼킬 수 있도록 하며, 식사 후에는 반드시 칫솔질을 하고 여의치 않을 경우에는 입안에 음식물이 남아있지 않게 물로 깨끗이 헹구어야 합니다.\n\n


        3. 일부 뇌성마비 장애인들은 경련으로 인해 장기적으로 항경련성 약물을 복용하는 경우가 있는데, 이런 약물 중 잇몸을 비정상적으로 자라게 하는 작용이 있기 때 문에 각별한 주의가 필요합니다.\n
        → 올바른 칫솔질은 물론이고 정기적으로 스케일링을 받고 조기 치료하여야 합니다.\n\n


        4. 입으로 숨을 쉬거나 혀를 내미는 습관 등으로 인해 앞니가 벌어지거나 턱뼈가 튀어나오기도 합니다.\n
        →조기에 습관을 교정해 주는 것이 좋습니다.\n\n


        5. 고도의 근육 강직과 이갈이 습관으로 치아가 많이 닳기도 합니다.\n
        → 전반적인 물리치료와 함께 안면근육 이완 훈련도 필요합니다. 뇌성마비 장애인의 경우 장애정도에 따라 근육의 불수의적 운동으로 원활한 칫솔질 동작을 하기 어 려운 경우가 많음으로 전동칫솔을 사용하거나 닦이지 않는 부위는 보호자가 칫솔 질을 해주어야 합니다.\n\n


        6. 뇌성마비환자에서 치면에 붙어있는 세균막 제거하는 것은 충치와 치주 질환을 예방하는 것뿐만 아니라 입 냄새로 인한 악취와 중증 장애인에게 나타나는 오염 타액의 기관 내 흡인으로 인한 폐렴 합병을 예방하는 것이기도 합니다.\n
        → 치면세균막의 조절방법\n
        -  올바른 양치질\n
        -  치실 및 치간 칫솔 사용\n
        -  클로르헥시딘 약물 사용\n
        -  전동칫솔사용(뇌성마비환자에게 추천)\n
        -  정기적인 치과방문, 스케일링
    </string>
    <string name="brain_lesions_tip">
        1) 안면근의 악화로 자정작용이 장애받고 적절한 헹구기가 어려움으로 전동흡입칫솔을 추천 드립니다.\n
        2) 팔, 어깨가 악화되어 칫솔질이 어렵기 때문에 보호자 감독 하에 전동칫솔이나 변형 손잡이 칫솔을 사용하는 것을 추천 드립니다.\n
        3) 부적절한 근육운동으로 인해서 입안에 음식물을 오래 담고 있어 충치나 잇몸병이 일반인의 2-3배 발생하기 때문에 구강근육을 움직일 수 있는 구강체조는 필수입니다.\n
        4) 가장 중요한 과정은 예방임으로 치간 칫솔 및 치실사용은 필수입니다.\n\n

        *자주 묻는 Q&amp;A\n
        1) 입안이 건조한 사람은 어떤 것이 중요한가요?\n
        - 먹는 약의 영향 등으로 타액이 부족하여 입 안이 건조해지는 경우가 있습니다.\n
        이 경우에는 충치나 치주염이 되기 쉬우므로, 혀 체조. 침샘 마사지 등으로 타액의 분비량을 늘리는 것이 중요합니다.\n\n

        2) 치약을 싫어하고, 스스로도 닦지 않으면 어떻게 하면 좋을까요?\n
        - 행동을 잘 관찰하고, 치약을 싫어하는 원인을 찾아보는게 좋습니다. 또 부분적인 부분부터 이를 닦게 하고, 시간도 처음엔 짧게 진행하여 점차적으로 이 닦는 시간을 늘려가는 것도 좋습니다.\n\n

        3) 긴장하고 칫솔을 입에 넣는 것이 어려울 경우 어떻게 해야 하나요?\n
        - 입 다물어 버리는 경우는 대화를 통해 긴장을 풀어주고 칫솔을 입에 넣고 부드럽게 치아를 건드린 채 입에 힘이 빠지는 것을 잠깐 기다렸다가 조금씩 진행하는 것도 좋은 방법입니다.\n\n

        4) 이를 닦아 줄 때 입을 크게 벌리지 않아서 어금니를 닦지 못한 경우 좋은 방법 이 있나요?\n
        - 어금니의 뺨 쪽부터 닦습니다. ‘이’ 하고 입을 벌리면 칫솔을 입술 끝 에서 깊이 넣어 공간을 확보하고 옆에 작은 칫솔 넣어서 움직입니다. 이때 힘을 너무 많이 주지 않도록 합니다.\n\n

        5) 이를 닦을 때 잇몸에서 피가 나는 경우는 어떻게 하면 좋을까요?\n
        - 잇몸이 붓는 경우에 출혈이 생길 수 있습니다. 칫솔을 가볍고 부드럽게 이동하면서 닦아주세요. 출혈이 지속된다면 병원에 내원하셔야합니다.\n\n

        6) 칫솔을 어떤 종류를 선택하면 좋습니까?\n
        - 칫솔을 크지 않은 것, 어금니까지 들어가는 크기가 좋습니다.\n
        부드러운 칫솔은 힘 조절이 어려워지고 딱딱한 타입은 사용법에 따른 치아와 잇몸을 상하게 하는 것이 있으므로 중간 정도의 강모를 사용하도록 추천합니다.\n\n

        7) 어떤 치약을 선택하면 될까요?\n
        - 장애인의 경우 충치를 예방해주는 불소가 함유된 치약을 사용하는 것이 좋습니다.\n\n

        8) 치실이나 치간 칫솔은 사용하는 것이 좋습니까?\n
        - “치아와 치아 사이”는 칫솔로 깨끗이 하기 어려운 부위입니다.\n
        치실이나 치간 칫솔은 이 사이를 효율적으로 닦을 수 있는 도구임으로 사용하시는 것을 추천드립니다.\n\n

        9) 양치질할 때 물을 삼키는 사람은 어떻게 하면 좋을까요?\n
        - 양치하는 동안 말을 걸어서 물을 삼키지 않도록 유도해주세요.\n\n

        10) 아무리 해도 양치질이 못한 사람의 경우는 어떻게 하면 좋을까요?\n
        - 컵에 불소 양치액을 채우고 칫솔에 불소 양치액을 적셔서 닦아주거나 마지막에 젖은 거즈로 치아와 잇몸을 닦아 주는 것도 효과적입니다.
    </string>
    <string name="brain_lesions_visit">
        # 사업 소개\n
        - 취약계층에서 구강건강 상태나 구강관리행태에 문제가 있거나 구강질환과 관련된 만성질환을 보유하고 있는 환자에게 보건소 내 치과의사에 지도하에 전담 치과위생사가 방문하여 구강관리 서비스를 제공하는 사업\n
         노인 및 장애인등 취약계층에 대한 찾아가는 구강보건사업으로 구강질환예방 및 구강건강의 문제점 인식 등 스스로 관리할 수 있도록 관심 유도\n\n

        # 필요성\n
        - 장애인은 정신적/물리적/경제적 요인으로 인해 치과의료 이용에 많은 어려움을 겪고 있기 때문에 구강질환에 무방비된 상태입니다. 게다가 구강보건관리능력이 떨어지기 때문에 방문 구강보건교육을 통한 조기 구강병관리와 예방이 아주 중요하기 때문\n\n

        # 대상\n
        - 취약계층의 구강건강상태 및 구강관리행태에 문제가 있거나 구강질환과 관련된 만성질환을 보유하고 있는 대상자\n\n

        * 구강서비스 대상자는 방문주기에 맞추어 대상자에게 필요한 구강서비스를 제공받 으며 2년 이후 잇솔질을 타인의 도움 없이 스스로 할 수 있고 구강건강문제가 없어진 경우 종결 하게 됨\n\n

        # 방문구강보건사업 군 분류에 따른 대상자 특성\n
        * 구강집중관리군 : 잇솔질을 스스로 할 수 없는 경우\n
        - 8-10주 주기로 대상자 집에 방문치과위생사가 직접 방문하여 구강보건교육, 구 강위생관리법 교육 및 대상자에게 필요한 전문가 잇솔질, 틀니세척, 입 체조, 구 강점막 및 구강근육마사지, 불소도포, 치면 세마, 구취관리 등을 실시하며 필요 에 따라서 구강보건실 센터 및 타 치과의료기관에 연계하는 구강서비스를 제공\n\n

        * 구강정기관리군 : 잇솔질은 스스로 할 수 있으나 자각적. 타각적 구강건강 문제가 있을 경우\n
        - 3개월 주기로 방문하여 구강서비스를 제공\n\n

        * 구강자기역량지원군 : 스스로 잇솔질이 가능하고, 자각적.타각적 구강건강 문제는 없으나 구강건강관리 행태에 문제가 있는 경우\n
        - 6개월-1년주기로 방문하여 구강서비스를 제공
    </string>
    <string name="tableRowText1">
        - 영양과 구강건강, 흡연과 구강건강, 손상과 구강건강, 노인의 구강관리법
    </string>
    <string name="tableRowText2">
        - 잇솔질법, 틀니관리법
    </string>
    <string name="tableRowText3">
        - 전문가 잇솔질, 틀니 세척, 입 세조, 구강점막 및 구강근육마사지, 불소도포, 치면 세마, 구치관리
    </string>
    <string name="tableRowText4">
        - 저소독 노인 무료틀니사업 대상자인 경우나 유지관리 대상자인 경우 해당 치과에 의뢰\n
        - 치통 등 응급치과치료 필요 시 치과진료 의뢰
    </string>
    <string name="hearing_impairment_characteristic">
        - 청각장애로 인해 치아이상이 동반되거나 충치가 많이 생기지는 않습니다.\n\n
        - 이가 나지 않은 영아기부터 손가락이나 거즈로 잇몸을 자극하여, 후에 칫솔로 자극을 줄 때 거부감을 최소화하고, 항상 같은 시간대에 같은 장소와 방법을 이용하여 칫솔질을 해줌으로써 새로운 자극보다는 익숙한 환경을 만들어 주는 것이 필요합니다.\n\n
        - 아이들의 행동을 유도하기 위하여 단 음식을 자주 주거나 편식을 시키면 구강상태는 악화되기 쉬우므로 적절한 간식 습관을 들여 주어야 합니다.
    </string>
    <string name="hearing_impairment_precautions">
        * 청각장애인은 스스로 자극을 주는 방법으로 이갈이 습관을 갖는 경우가 있습니다. 이런 경우 치아는 지나친 마모가 일어나고 턱관절에 이상을 초래할 수 있습니다\n
        → 초기에 입안에 끼는 장치를 사용하여 치아를 보호하고 턱관절 이상을 예방해 줄 필요가 있습니다.\n\n

        * 대화를 통한 적절한 입 운동이 이루어지지 않아서 구강 내에 침과 음식 찌꺼기 가 오래 남아 있을 수 있어 치석과 잇몸병이 잘 생길 수 있습니다\n
        →  1. 식사 후 칫솔질은 물론이고 물로 입안을 헹구는 습관을 갖습니다.\n
           2. 구강체조를 꾸준히 하고 정기적으로 스케일링을 하면 이를 예방할 수 있습니다.\n\n

       *자주 묻는 Q&amp;A\n
        1) 입안이 건조한 사람은 어떤 것이 중요한가요?\n
        - 먹는 약의 영향 등으로 타액이 부족하여 입 안이 건조해지는 경우가 있습니다.\n
        이 경우에는 충치나 치주염이 되기 쉬우므로, 혀 체조. 침샘 마사지 등으로 타액의 분비량을 늘리는 것이 중요합니다.\n\n

        2) 치약을 싫어하고, 스스로도 닦지 않으면 어떻게 하면 좋을까요?\n
        - 행동을 잘 관찰하고, 치약을 싫어하는 원인을 찾아보는게 좋습니다. 또 부분적인 부분부터 이를 닦게 하고, 시간도 처음엔 짧게 진행하여 점차적으로 이 닦는 시간을 늘려가는 것도 좋습니다.\n\n

        3) 긴장하고 칫솔을 입에 넣는 것이 어려울 경우 어떻게 해야 하나요?\n
        - 입 다물어 버리는 경우는 대화를 통해 긴장을 풀어주고 칫솔을 입에 넣고 부드럽게 치아를 건드린 채 입에 힘이 빠지는 것을 잠깐 기다렸다가 조금씩 진행하는 것도 좋은 방법입니다.\n\n

        4) 이를 닦아 줄 때 입을 크게 벌리지 않아서 어금니를 닦지 못한 경우 좋은 방법 이 있나요?\n
        - 어금니의 뺨 쪽부터 닦습니다. ‘이’ 하고 입을 벌리면 칫솔을 입술 끝 에서 깊이 넣어 공간을 확보하고 옆에 작은 칫솔 넣어서 움직입니다. 이때 힘을 너무 많이 주지 않도록 합니다.\n\n

        5) 이를 닦을 때 잇몸에서 피가 나는 경우는 어떻게 하면 좋을까요?\n
        - 잇몸이 붓는 경우에 출혈이 생길 수 있습니다. 칫솔을 가볍고 부드럽게 이동하면서 닦아주세요. 출혈이 지속된다면 병원에 내원하셔야합니다.\n\n

        6) 칫솔을 어떤 종류를 선택하면 좋습니까?\n
        - 칫솔을 크지 않은 것, 어금니까지 들어가는 크기가 좋습니다.\n
        부드러운 칫솔은 힘 조절이 어려워지고 딱딱한 타입은 사용법에 따른 치아와 잇몸을 상하게 하는 것이 있으므로 중간 정도의 강모를 사용하도록 추천합니다.\n\n

        7) 어떤 치약을 선택하면 될까요?\n
        - 장애인의 경우 충치를 예방해주는 불소가 함유된 치약을 사용하는 것이 좋습니다.\n\n

        8) 치실이나 치간 칫솔은 사용하는 것이 좋습니까?\n
        - “치아와 치아 사이”는 칫솔로 깨끗이 하기 어려운 부위입니다.\n
        치실이나 치간 칫솔은 이 사이를 효율적으로 닦을 수 있는 도구임으로 사용하시는 것을 추천드립니다.\n\n

        9) 양치질할 때 물을 삼키는 사람은 어떻게 하면 좋을까요?\n
        - 양치하는 동안 말을 걸어서 물을 삼키지 않도록 유도해주세요.\n\n

        10) 아무리 해도 양치질이 못한 사람의 경우는 어떻게 하면 좋을까요?\n
        - 컵에 불소 양치액을 채우고 칫솔에 불소 양치액을 적셔서 닦아주거나 마지막에 젖은 거즈로 치아와 잇몸을 닦아 주는 것도 효과적입니다.
    </string>
    <string name="visual_impairment_characteristic">
        - 시각 장애인은 색다른 자극에 민감하여 특히 촉각과 맛에 민감하기 때문에 억지로 치약사용을 권하는 것은 무리가 될 수 있습니다. 이 경우에는 치약을 사용하지 않고 칫솔만으로 닦아주어도 무방하며 처음에는 자신의 손가락으로 입안을 만지며 손가락에 끼는 칫솔을 사용하도록 하며 차츰 칫솔질이 익숙해지면 맛과 향이 강하지 않은 치약을 사용하여 칫솔질 습관을 들이도록 해야 합니다.\n\n
        - 아이들의 행동을 유도하기 위하여 단 음식을 자주 주거나 편식을 시키면 구강상태는 악화되기 쉬우므로 적절한 간식 습관을 들여 주어야 합니다.
    </string>
    <string name="visual_impairment_precautions">
        * 선천적인 시각장애\n
        선천적인 경우 종종 치아에 이상이 동반되어 유치(갈아야 하는 이)는 약한 치아로 인하여 충치에 쉽게 걸리기도 하고 잘 부서지기도 합니다. 영구치는 법랑질이 약하거나 치아 개수가 부족한 경우가 있습니다.\n
        → 치아에 이상이 동반되는 경우 충치나 치아손상을 줄이기 위한 예방적 수복과 불소도포,치아 홈메우기 등의 예방 처치가 필요합니다.\n\n

        * 후천적인 시각장애\n
        장애로 인한 이상이 발생하지 않지만 적응기간 동안 외상을 당하기 쉽기 때문에 앞니가 다칠 위험이 있습니다.\n
        → 치아가 완전히 빠진 경우에도 치과에서 다시 제자리에 심어 고정시킬 수 있기 때문에 빠진 치아를 씻지 말고 생리 식염수나 우유에 담근 상태로 가능한 빠른 시간 내에 치료를 받아야 합니다.
    </string>
    <string name="visual_impairment_tip">
        1) 치석과 음식찌꺼기의 확인이 곤란하여 충치나 잇몸병의 이환율이 높으므로 치실 치간 칫솔 등 구강위생관리가 필요합니다.\n
        2) 완벽한 칫솔질이 곤란하므로 움직임이 많은 전동칫솔을 사용하는 것이 도움이 됩니다\n\n

        *자주 묻는 Q&amp;A\n
        1) 입안이 건조한 사람은 어떤 것이 중요한가요?\n
        - 먹는 약의 영향 등으로 타액이 부족하여 입 안이 건조해지는 경우가 있습니다.\n
        이 경우에는 충치나 치주염이 되기 쉬우므로, 혀 체조. 침샘 마사지 등으로 타액의 분비량을 늘리는 것이 중요합니다.\n\n

        2) 치약을 싫어하고, 스스로도 닦지 않으면 어떻게 하면 좋을까요?\n
        - 행동을 잘 관찰하고, 치약을 싫어하는 원인을 찾아보는게 좋습니다. 또 부분적인 부분부터 이를 닦게 하고, 시간도 처음엔 짧게 진행하여 점차적으로 이 닦는 시간을 늘려가는 것도 좋습니다.\n\n

        3) 긴장하고 칫솔을 입에 넣는 것이 어려울 경우 어떻게 해야 하나요?\n
        - 입 다물어 버리는 경우는 대화를 통해 긴장을 풀어주고 칫솔을 입에 넣고 부드럽게 치아를 건드린 채 입에 힘이 빠지는 것을 잠깐 기다렸다가 조금씩 진행하는 것도 좋은 방법입니다.\n
        - 뺨이 긴장이 되어 있는 경우는 칫솔을 볼의 안쪽에서 천천히 마사지하는 것도 좋습니다.\n\n

        4) 이를 닦아 줄 때 입을 크게 벌리지 않아서 어금니를 닦지 못한 경우 좋은 방법 이 있나요?\n
        - 어금니의 뺨 쪽부터 닦습니다.\n
        ‘이’ 하고 입을 벌리면 칫솔을 입술 끝 에서 깊이 넣어 공간을 확보하고 옆에 작은 칫솔 넣어서 움직입니다.\n
        이때 힘을 너무 많이 주지 않도록 합니다.\n\n

        5) 이를 닦을 때 잇몸에서 피가 나는 경우는 어떻게 하면 좋을까요?\n
        - 잇몸이 붓는 경우에 출혈이 생길 수 있습니다.\n
        칫솔을 가볍고 부드럽게 이동하면서 닦아주세요.\n
        출혈이 지속된다면 병원에 내원하셔야합니다.\n\n

        6) 칫솔을 어떤 종류를 선택하면 좋습니까?\n
        - 칫솔을 크지 않은 것, 어금니까지 들어가는 크기가 좋습니다.\n
        부드러운 칫솔은 힘 조절이 어려워지고 딱딱한 타입은 사용법에 따른 치아와 잇몸을 상하게 하는 것이 있으므로 중간 정도의 강모를 사용하도록 추천합니다.\n\n

        7) 어떤 치약을 선택하면 될까요?\n
        - 장애인의 경우 충치를 예방해주는 불소가 함유된 치약을 사용하는 것이 좋습니다.\n\n

        8) 치실이나 치간 칫솔은 사용하는 것이 좋습니까?\n
        - “치아와 치아 사이”는 칫솔로 깨끗이 하기 어려운 부위입니다.\n
        치실이나 치간 칫솔은 이 사이를 효율적으로 닦을 수 있는 도구임으로 사용하시는 것을 추천드립니다.\n\n

        9) 양치질할 때 물을 삼키는 사람은 어떻게 하면 좋을까요?\n
        - 양치하는 동안 말을 걸어서 물을 삼키지 않도록 유도해주세요.\n\n

        10) 아무리 해도 양치질이 못한 사람의 경우는 어떻게 하면 좋을까요?\n
        - 컵에 불소 양치액을 채우고 칫솔에 불소 양치액을 적셔서 닦아주거나 마지막에 젖은 거즈로 치아와 잇몸을 닦아주는 것도 효과적입니다.\n\n
    </string>
    <string name="disable_people_dentistry_hospitainfo">
        1) 목적\n
        장애인에 대한 치과 의료서비스의 접근성 및 전문성을 향상하고, 장애인구강진료의 거점 역할을 수행하기 위해 대학(치과)병원, 보건소 등에 장애인구강진료센터 설치, 위탁, 운영 지원\n\n
        2) 진료비 지원 대상\n
        장애 유형, 등급, 나이에 관계없이 장애인 복지카드를 소지한 모든 장애인\n\n
        3) 구비서류\n
        - 공통 서류 : 장애인복지카드(또는 장애인증명서), 기초생활수급자증명서(해당자), 신분증\n
        - 기타 서류 : 선택의료급여기관의뢰서(의료급여 환자 중 해당자)\n
        * 구비 서류를 반드시 지참하여야 진료비 지원이 가능합니다.\n\n
        4) 진료비 지원 금액\n
        - 기초생활수급자 장애인 : 비급여 진료비 총액의 50% 지원\n
        - 치과영역 중증 장애인 : 비급여 진료비 총액의 30% 지원\n
        - 치과영역 경증 장애인 : 비급여 진료비 총액의 10% 지원\n
        * 진료비 지원대상자임 확인할 수 있는 구비서류를 지참한자에 한하여 에산범위내에서 지원\n\n
    </string>
    <string name="itemNumber1">Easy grip 칫솔</string>
    <string name="itemNumber2">360도 원형 칫솔</string>
    <string name="itemNumber3">치실</string>
    <string name="itemNumber4">치간칫솔</string>
    <string name="itemNumber5">구강양치액</string>
    <string name="itemNumber6">치약</string>
    <string name="itemNumber7">전동흡입칫솔</string>
    <string name="itemNumber8">구강세정기</string>
    <string name="itemNumber9">혀 클리너</string>
    <string name="teethCare1">
        1) 치간 칫솔에는 다양한 사이즈가 있는데요. 자신에게 맞는 사이즈를 찾아서 사용 하시는 게 중요합니다. 치간 사이가 헐겁게 통과하는 치간 칫솔 사이즈 말고 약간의 저항성이 있게 통과되는 사이즈를 추천해드립니다.
    </string>
    <string name="teethCare2">
        2) 치간 칫솔을 치아와 치아 사이에 부드럽게 넣습니다. 이때 잘 들어가지 않는 부위는 억지로 넣지 말아주세요.\n\n
        3) 치간 칫솔을 수평으로 하고 치아사이에 천천히 삽입하여 2-3회 반복합니다.\n\n
        4) 치간 칫솔은 일회용이 아닙니다. 사용 후 깨끗이 씻어 건조시킨 후 칫솔케이스에 끼워 보관해주세요.\n\n
        5) 모가 벌어졌거나 보통 2-4회 정도 사용하시면 교체하시는 게 좋습니다.\n
    </string>
    <string name="teethCare3">
        1) 치실에도 종류가 있는데요. 저희는 비교적 사용하기 쉬운 치실 고리를 추천드리고 싶습니다.\n\n
        2) 손잡이를 잡으시고 치아와 치아 사이에 톱질하듯이 넣어주세요\n\n
        3) 삽입 후 살짝 옆으로 당기셔서 c자 모양이 되도록 말아주시고 다시 톱질하듯이 치실 고리를 빼주시면 됩니다.\n
    </string>
</resources>