<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#AADBFF"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#90AFFF"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/box_line_white" />

        <TextView
            android:id="@+id/self_test_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/binggrae_bold"
            android:gravity="center"
            android:paddingRight="20dp"
            android:text="구강관리용품"
            android:textColor="#ffffff"
            android:textSize="35sp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/box_line_white" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/itemVideoN1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="40dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="300dp"
                    android:layout_height="200dp"
                    android:background="@drawable/icon_youtube" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:fontFamily="@font/binggrae_bold"
                    android:text="@string/itemNumber1"
                    android:textColor="#000000"
                    android:textSize="30dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/itemVideoN2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="40dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="300dp"
                    android:layout_height="200dp"
                    android:background="@drawable/icon_youtube" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:fontFamily="@font/binggrae_bold"
                    android:text="@string/itemNumber2"
                    android:textColor="#000000"
                    android:textSize="30dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/itemVideoN3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="40dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="300dp"
                    android:layout_height="200dp"
                    android:background="@drawable/icon_youtube" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:fontFamily="@font/binggrae_bold"
                    android:text="@string/itemNumber3"
                    android:textColor="#000000"
                    android:textSize="30dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/itemVideoN4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="40dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="300dp"
                    android:layout_height="200dp"
                    android:background="@drawable/icon_youtube" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:fontFamily="@font/binggrae_bold"
                    android:text="@string/itemNumber4"
                    android:textColor="#000000"
                    android:textSize="30dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/itemVideoN5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="40dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="300dp"
                    android:layout_height="200dp"
                    android:background="@drawable/icon_youtube" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:fontFamily="@font/binggrae_bold"
                    android:text="@string/itemNumber5"
                    android:textColor="#000000"
                    android:textSize="30dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/itemVideoN6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="40dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="300dp"
                    android:layout_height="200dp"
                    android:background="@drawable/icon_youtube" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:fontFamily="@font/binggrae_bold"
                    android:text="@string/itemNumber6"
                    android:textColor="#000000"
                    android:textSize="30dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/itemVideoN7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="40dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="300dp"
                    android:layout_height="200dp"
                    android:background="@drawable/icon_youtube" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:fontFamily="@font/binggrae_bold"
                    android:text="@string/itemNumber7"
                    android:textColor="#000000"
                    android:textSize="30dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/itemVideoN8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="40dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="300dp"
                    android:layout_height="200dp"
                    android:background="@drawable/icon_youtube" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:fontFamily="@font/binggrae_bold"
                    android:text="@string/itemNumber8"
                    android:textColor="#000000"
                    android:textSize="30dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/itemVideoN9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="40dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="300dp"
                    android:layout_height="200dp"
                    android:background="@drawable/icon_youtube" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:fontFamily="@font/binggrae_bold"
                    android:text="@string/itemNumber9"
                    android:textColor="#000000"
                    android:textSize="30dp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>